# hello-world05e0a2d0-68f8-4225-b8e0-0da211127aee

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: delete_user_account_service.py  getHelloWorld_service.py  get_hello_world_service.py  login_user_service.py  register_user_service.py  say_hello_world_service.py  server.py
